src/test/deca/context/invalid/decl_field_already_declared.deca
// Test la règle 2.4: le champ est déjà déclaré dans la classe

class A  {
    int x = 5;
    float x = 6.4;
}

// Resultat:
//# DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:42) - verify program: start
//# DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass(ListDeclClass.java:28) - verify listClass: start
//# DEBUG fr.ensimag.deca.tree.ListDeclClass.verifyListClass(ListDeclClass.java:33) - verify listClass: end
//# src/test/deca/context/invalid/field_already_declared.deca:5:10: The field "x" is already declared : rule 2.4